Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/parser/7157165/T7157165.out
T7157165.java:11:20: compiler.err.expected: >
T7157165.java:11:22: compiler.err.expected: token.identifier
T7157165.java:11:28: compiler.err.expected: token.identifier
3 errors
